# dioxus-i18n

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  publish.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
dioxus-i18n-json/: Cargo.toml  README.md
dioxus-i18n-json-macro/: Cargo.toml  README.md
dioxus-i18n-json-macro/src/: lib.rs
dioxus-i18n-json/src/: config.rs  hot_reload.rs  lib.rs  loader.rs
docs/: README.md  _sidebar.md  api.md  changelog.md  coverpage.md  crates.md  examples.md  getting-started.md  hot-reload.md  index.html  plurals.md  trans.md  typed-keys.md  web.md
examples/advanced-i18n/: Cargo.toml
examples/advanced-i18n/locales/: en.json  pl.json  ru.json
examples/advanced-i18n/src/: main.rs
examples/hello-i18n/: Cargo.toml
examples/hello-i18n/locales/: en.json  es.json  fr.json
examples/hello-i18n/src/: main.rs
examples/minimal-i18n/: Cargo.toml
examples/minimal-i18n/src/: main.rs
examples/web-i18n/: Cargo.toml
examples/web-i18n/locales/: en.json  ja.json
examples/web-i18n/src/: main.rs
