[package]
name = "dioxus-i18n-json-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Proc-macro for generating typed translation keys for dioxus-i18n-json."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["parsing"] }
serde_json = "1.0"
