[package]
name = "dioxus-i18n-json"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
description = "A lightweight i18n library for Dioxus with JSON-based translations, hot reload, and typed keys."

[features]
default = []
hot-reload = ["notify", "tokio"]

[dependencies]
dioxus = "0.6"
dioxus-i18n-json-macro = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
icu_plurals = "2.2"
icu_locale = "2.2"

notify = { version = "6.1", optional = true }
tokio = { version = "1.40", features = ["rt-multi-thread", "time"], optional = true }
